@@ -14,7 +14,7 @@ Gem::Specification.new do |s|
 
   s.rdoc_options << "CHANGELOG.rdoc"
   s.required_ruby_version = "~> 1.8.7"
-  s.add_dependency "heroku", "~> 1.0.0"
+  s.add_dependency "heroku", "~> 1.16.0"
   s.add_development_dependency "rspec"
   s.executables << "hp"
   
